unpackaged/main/default/objects/pro_Purchase_Order_Line__c/pro_Purchase_Order_Line__c.object-meta.xml
<CustomObject>
    <description>JP 26/06/2023 - Updates to object name
JP 14/03/2023 V1 - Created by Prodigy</description>
    <label>Purchase Order Line - Overhead</label>
    <nameField>
        <displayFormat>POL-{0000}</displayFormat>
        <label>Purchase Order Line Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Purchase Order Lines - Overhead</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>