unpackaged/main/default/objects/pro_Purchase_Order_Line__c/fields/pro_Comment__c.field-meta.xml
<CustomField>
    <fullName>pro_Comment__c</fullName>
    <description>JP 14/03/2023 V1 - Created by Prodigy</description>
    <label>Comment</label>
    <type>TextArea</type>
</CustomField>