unpackaged/main/default/objects/pro_Purchase_Order_Line__c/fields/pro_Converted_Amount__c.field-meta.xml
<CustomField>
    <fullName>pro_Converted_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>JP 26/06/2023 - Created by Prodigy</description>
    <label>Converted Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>