unpackaged/main/default/objects/pro_Purchase_Order_Line__c/fields/pro_Expense_GL_Account__c.field-meta.xml
<CustomField>
    <fullName>pro_Expense_GL_Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>JP 06/04/2023 - Created by Prodigy</description>
    <label>Expense GL Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>AcctSeed__GL_Account__c.AcctSeed__Type__c</field>
            <operation>equals</operation>
            <value>Balance Sheet, Expense</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>AcctSeed__GL_Account__c</referenceTo>
    <relationshipLabel>Purchase Order Lines - Overhead</relationshipLabel>
    <relationshipName>pro_Purchase_Order_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>