unpackaged/main/default/objects/pro_Purchase_Order_Line__c/fields/pro_Product__c.field-meta.xml
<CustomField>
    <fullName>pro_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>JP 15/03/2023 V1 - Created by Prodigy</description>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipName>pro_Purchase_Order_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>