unpackaged/main/default/objects/pro_Purchase_Order_Line__c/fields/pro_Purchase_Order__c.field-meta.xml
<CustomField>
    <fullName>pro_Purchase_Order__c</fullName>
    <description>JP 14/03/2023 V1 - Created by Prodigy</description>
    <label>Purchase Order</label>
    <referenceTo>pro_Purchase_Order__c</referenceTo>
    <relationshipName>pro_Purchase_Order_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>