unpackaged/main/default/objects/pro_Purchase_Order_Line__c/fields/pro_Quantity__c.field-meta.xml
<CustomField>
    <fullName>pro_Quantity__c</fullName>
    <defaultValue>0</defaultValue>
    <description>JP 14/03/2023 V1 - Created by Prodigy</description>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>