unpackaged/main/default/objects/pro_Purchase_Order_Line__c/fields/pro_Remaining_Balance__c.field-meta.xml
<CustomField>
    <fullName>pro_Remaining_Balance__c</fullName>
    <description>JP 26/06/2023 - Created by Prodigy</description>
    <formula>pro_Quantity__c -  pro_Converted_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining Balance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>