unpackaged/main/default/objects/pro_Purchase_Order_Line__c/fields/pro_Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>pro_Total_Amount__c</fullName>
    <description>JP 14/03/2023 V1 - Created by Prodigy</description>
    <formula>pro_Unit_Price__c *  pro_Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>