unpackaged/main/default/objects/pro_Purchase_Order_Line__c/fields/pro_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>pro_Unit_Price__c</fullName>
    <description>JP 14/03/2023 V1 - Created by Prodigy</description>
    <label>Unit Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>