unpackaged/main/default/objects/pro_Purchase_Order_Line__c/validationRules/Invalid_Currency.validationRule-meta.xml
<ValidationRule>
    <fullName>Invalid_Currency</fullName>
    <active>true</active>
    <description>JP 14/03/2023 V1 - Created by Prodigy</description>
    <errorConditionFormula>TEXT( CurrencyIsoCode ) != TEXT( pro_Purchase_Order__r.CurrencyIsoCode )</errorConditionFormula>
    <errorDisplayField>CurrencyIsoCode</errorDisplayField>
    <errorMessage>Currency must match PO Header.</errorMessage>
</ValidationRule>