unpackaged/main/default/objects/pro_Purchase_Order_Line__c/validationRules/Missing_Product.validationRule-meta.xml
<ValidationRule>
    <fullName>Missing_Product</fullName>
    <active>true</active>
    <description>JP 15/03/2023 V1 - Created by Prodigy</description>
    <errorConditionFormula>ISBLANK( pro_Product__c )</errorConditionFormula>
    <errorDisplayField>pro_Product__c</errorDisplayField>
    <errorMessage>Product is required.</errorMessage>
</ValidationRule>